# FMI-influx

./: Dockerfile  README.md  example_config.toml  pyproject.toml  requirements.txt  upload_FMI.py
FMI_influx/: FMI_influx.py  __main__.py  config.py  data_parser.py  fmi_api.py  influxdb.py
