[tool.poetry]
name = "FMI-influx"
version = "0.1.0"
description = "FMI API to InfluxDB uploader"
authors = ["Olli Wilkman <olli.wilkman@iki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
toml = "^0.10.2"
aiohttp = "^3.8.3"
aioinflux = "^0.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest = "^7.1.3"
types-toml = "^0.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
